--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -2,7 +2,7 @@
     <section id="contact">
         <div class="inner">
             <section>
-                <form method="post" action="https://formspree.io/psikri.mam2022@london.edu">
+                <form method="post" action="https://formspree.io/f/mayavpyk">
                     <div class="field half first">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" />
